--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^4.1.11",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
@@ -40,5 +41,8 @@
     "lint-staged": "^10.4.0",
     "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
